--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <h4>Torre dell'Orologio</h4>
             <p>Diumenge 16:20 — Entrada normal</p>
           </div>
-          <a href="C:\Users\adria\OneDrive\Desktop\ESRI\Practicas_ESRI\sorpresa30\docs\TorreDellOrologio_NMM.pdf" target="_blank" rel="noopener">Descarrega</a>
+          <a href="https://apugar8.github.io/sorpresa30/docs/TorreDellOrologio_NMM.pdf" target="_blank" rel="noopener">Descarrega</a>
         </div>
 
         <div class="ticket">
@@ -273,7 +273,7 @@
             <h4>Collezioni Comunale d'Arte</h4>
             <p>Diumenge 17:00 — Entrada normal</p>
           </div>
-          <a href="C:\Users\adria\OneDrive\Desktop\ESRI\Practicas_ESRI\sorpresa30\docs\CollezioneComunaleArte_NMM.pdf" target="_blank" rel="noopener">Descarrega</a>
+          <a href="https://apugar8.github.io/sorpresa30/docs/CollezioneComunaleArte_NMM.pdf" target="_blank" rel="noopener">Descarrega</a>
         </div>
 
         <div class="ticket">
@@ -281,7 +281,7 @@
             <h4>Palazzo dell'Archiginnasio + Teatro Anatomico</h4>
             <p>Dilluns 10:20 — Entrada amb audioguia</p>
           </div>
-          <a href="C:\Users\adria\OneDrive\Desktop\ESRI\Practicas_ESRI\sorpresa30\docs\PalazzoDellArchiginnasio_Teatro Anatomico_NMM.pdf" target="_blank" rel="noopener">Descarrega</a>
+          <a href="https://apugar8.github.io/sorpresa30/docs/PalazzoDellArchiginnasio_Teatro Anatomico_NMM.pdf" target="_blank" rel="noopener">Descarrega</a>
         </div>
 
         <p class="small" style="margin-top:12px">Recorda: aquests tiquets et serviran per al transport i per a entrar als llocs de l'itinerari.</p>
