--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <h4>Vol: València → Bolonya</h4>
             <p>9 novembre — targeta d'embarque</p>
           </div>
-          <a href="https://example.com/sample-flight.pdf" target="_blank" rel="noopener">Descarrega</a>
+          <a href="https://apugar8.github.io/sorpresa30/docs/BilletAvio.jpg" target="_blank" rel="noopener">Descarrega</a>
         </div>
 
         <div class="ticket">
